--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <main class="main-page">
       <!--Motto and request a service button -->
       <section class="main-head">
-        <div class="section">
+        <div class="section container">
           <h1>
             EFFECTIVE SOLUTIONS FOR<br />
             YOUR BUSINESS
@@ -68,7 +68,7 @@
       </section>
       <!-- Values section -->
       <section class="values">
-        <div class="section">
+        <div class="section container">
           <h2 class="visually-hidden">Title</h2>
           <ul>
             <li>
@@ -123,7 +123,7 @@
         </div>
       </section>
       <!-- What we do -->
-      <section class="activities">
+      <section class="activities container">
         <div class="section">
           <h2>What we do</h2>
           <ul>
@@ -158,7 +158,7 @@
         </div>
       </section>
       <!-- Our team -->
-      <section class="team-members">
+      <section class="team-members container">
         <div class="section">
           <h2>Our Team</h2>
           <ul class="member-list">
@@ -302,7 +302,7 @@
         </div>
       </section>
       <!-- Customers section -->
-      <section class="customers">
+      <section class="customers container">
         <div class="section">
           <h2>Regular Customers</h2>
           <div class="customers-cards">
