making adaptive header section

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <!-- Header -->
     <header class="global-header">
       <div class="container">
+        <a class="logo" href="./index.html"><span>Web</span>Studio</a>
         <div class="container-nav">
-          <a class="logo" href="./index.html"><span>Web</span>Studio</a>
           <nav class="main-navigation">
             <ul>
               <li>
@@ -49,6 +49,11 @@
             </svg>
             <span>+1 212-772-4150</span>
           </a>
+        </div>
+        <div class="nav-container-mobile">
+          <svg>
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
         </div>
       </div>
     </header>
