--- a/portfolio.html
+++ b/portfolio.html
@@ -22,13 +22,15 @@
     <!-- Header -->
     <header class="global-header">
       <div class="container">
+        <a class="logo" href="./index.html"><span>Web</span>Studio</a>
         <div class="container-nav">
-          <a class="logo" href="./index.html"><span>Web</span>Studio</a>
           <nav class="main-navigation">
             <ul>
-              <li><a href="./index.html">Studio</a></li>
               <li>
-                <a class="after-link" href="./portfolio.html" id="current"
+                <a href="./index.html">Studio</a>
+              </li>
+              <li>
+                <a class="after-link" id="current" href="./portfolio.html"
                   >Portfolio</a
                 >
               </li>
@@ -49,6 +51,11 @@
             </svg>
             <span>+1 212-772-4150</span>
           </a>
+        </div>
+        <div class="nav-container-mobile">
+          <svg>
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
         </div>
       </div>
     </header>
