--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
             <span>+1 212-772-4150</span>
           </a>
         </div>
-        <div class="nav-container-mobile">
+        <div class="menu-button js-open-menu">
           <svg>
             <use href="./images/icons.svg#icon-menu"></use>
           </svg>
