adding density and receptive properties for bg img

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </svg>
       </button>
       <nav class="menu-drawer-navigation">
-        <ul>
+        <ul class="contact-adress">
           <li>
             <a class="after-link" href="./index.html" id="current">Studio</a>
           </li>
