making main-head section responsive

--- a/index.html
+++ b/index.html
@@ -92,10 +92,7 @@
       <!--Motto and request a service button -->
       <section class="main-head">
         <div class="section container">
-          <h1>
-            EFFECTIVE SOLUTIONS FOR<br />
-            YOUR BUSINESS
-          </h1>
+          <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
           <button data-modal-open class="request-button" type="button">
             Request our service
           </button>
