making customer section responsive

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           <ul class="member-list">
             <li>
               <img
-                src="./images/product-designer.jpg"
+                src="./images/product-designer-d.jpg"
                 alt="Product Designer"
                 width="270"
                 height="260"
@@ -230,7 +230,7 @@
             </li>
             <li>
               <img
-                src="./images/frontend-developer.jpg"
+                src="./images/frontend-developer-d.jpg"
                 alt="Frontend Developer"
                 width="270"
                 height="260"
@@ -264,7 +264,7 @@
             </li>
             <li>
               <img
-                src="./images/marketing.jpg"
+                src="./images/marketing-d.jpg"
                 alt="Marketing"
                 width="270"
                 height="260"
@@ -298,7 +298,7 @@
             </li>
             <li>
               <img
-                src="./images/ui-designer.jpg"
+                src="./images/ui-designer-d.jpg"
                 alt="UI Designer"
                 width="270"
                 height="260"
