adding styels in js-menu-container

--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
         </svg>
       </button>
       <nav class="menu-drawer-navigation">
-        <ul class="contact-adress">
+        <ul class="mobile-navigation">
           <li>
             <a class="after-link" href="./index.html" id="current">Studio</a>
           </li>
           <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
-        <div>
-          <a class="contact-adress e-mail" href="mailto:info@devstudio.com">
-            <span>info@devstudio.com</span>
-          </a>
-          <a class="contact-adress telephone" href="=tel:+12127724150">
+        <div class="mobile-contact-address">
+          <a class="contact-address telephone" href="=tel:+12127724150">
             <span>+1 212-772-4150</span>
           </a>
+          <a class="contact-address e-mail" href="mailto:info@devstudio.com">
+            <span>info@devstudio.com</span>
+          </a>
         </div>
-        <div>
+        <div class="mobile-social-media">
           <a href="https://www.instagram.com/" target="_blank">Instagram</a>
           <a href="https://www.twitter.com/" target="_blank">Twitter</a>
           <a href="https://www.facebook.com/" target="_blank">Facebook</a>
