making team members section responsive

--- a/index.html
+++ b/index.html
@@ -195,12 +195,38 @@
           <h2>Our Team</h2>
           <ul class="member-list">
             <li>
-              <img
-                src="./images/product-designer-d.jpg"
-                alt="Product Designer"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <!-- Desktop -->
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/product-designer-d.jpg     1x,
+                    ./images/product-designer-d-2x.jpeg 2x
+                  "
+                />
+
+                <!-- Tablet -->
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/product-designer-t.jpeg    1x,
+                    ./images/product-designer-t-2x.jpeg 2x
+                  "
+                />
+
+                <!-- Mobile -->
+                <source
+                  srcset="
+                    ./images/product-designer-m.jpeg    1x,
+                    ./images/product-designer-m-2x.jpeg 2x
+                  "
+                />
+                <img
+                  src="./images/product-designer-d.jpg"
+                  alt="Product-designer"
+                  class="img-test"
+                />
+              </picture>
               <div class="item">
                 <h3>Christopher Walker</h3>
                 <p>Product Designer</p>
@@ -229,12 +255,36 @@
               </div>
             </li>
             <li>
-              <img
-                src="./images/frontend-developer-d.jpg"
-                alt="Frontend Developer"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <!-- Desktop -->
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/frontend-developer-d.jpg     1x,
+                    ./images/frontend-developer-d-2x.jpeg 2x
+                  "
+                />
+                <!-- Tablet -->
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/frontend-developer-t.jpeg    1x,
+                    ./images/frontend-developer-t-2x.jpeg 2x
+                  "
+                />
+                <!-- Mobile -->
+                <source
+                  srcset="
+                    ./images/frontend-developer-m.jpeg    1x,
+                    ./images/frontend-developer-m-2x.jpeg 2x
+                  "
+                />
+                <img
+                  src="./images/frontend-developer-d.jpg"
+                  alt="Frontend-developer"
+                  class="img-test"
+                />
+              </picture>
               <div class="item">
                 <h3>Kylie Evans</h3>
                 <p>Frontend Developer</p>
@@ -263,12 +313,36 @@
               </div>
             </li>
             <li>
-              <img
-                src="./images/marketing-d.jpg"
-                alt="Marketing"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <!-- Desktop -->
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/marketing-d.jpg     1x,
+                    ./images/marketing-d-2x.jpeg 2x
+                  "
+                />
+                <!-- Tablet -->
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/marketing-t.jpeg    1x,
+                    ./images/marketing-t-2x.jpeg 2x
+                  "
+                />
+                <!-- Mobile -->
+                <source
+                  srcset="
+                    ./images/marketing-m.jpeg    1x,
+                    ./images/marketing-m-2x.jpeg 2x
+                  "
+                />
+                <img
+                  src="./images/marketing-d.jpg"
+                  alt="Marketing"
+                  class="img-test"
+                />
+              </picture>
               <div class="item">
                 <h3>Ryan Harris</h3>
                 <p>Marketing</p>
@@ -297,12 +371,36 @@
               </div>
             </li>
             <li>
-              <img
-                src="./images/ui-designer-d.jpg"
-                alt="UI Designer"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <!-- Desktop -->
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/ui-designer-d.jpg     1x,
+                    ./images/ui-designer-d-2x.jpeg 2x
+                  "
+                />
+                <!-- Tablet -->
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/ui-designer-t.jpeg    1x,
+                    ./images/ui-designer-t-2x.jpeg 2x
+                  "
+                />
+                <!-- Mobile -->
+                <source
+                  srcset="
+                    ./images/ui-designer-m.jpeg    1x,
+                    ./images/ui-designer-m-2x.jpeg 2x
+                  "
+                />
+                <img
+                  src="./images/ui-designer-d.jpg"
+                  alt="Ui-designer"
+                  class="img-test"
+                />
+              </picture>
               <div class="item">
                 <h3>Tyler Moore</h3>
                 <p>UI Designer</p>
