--- a/portfolio.html
+++ b/portfolio.html
@@ -39,13 +39,13 @@
           </nav>
         </div>
         <div class="container-contact">
-          <a class="contact-adress e-mail" href="mailto:info@devstudio.com">
+          <a class="contact-address e-mail" href="mailto:info@devstudio.com">
             <svg class="icon">
               <use href="./images/icons.svg#icon-envelope"></use>
             </svg>
             <span>info@devstudio.com</span>
           </a>
-          <a class="contact-adress telephone" href="=tel:+12127724150">
+          <a class="contact-address telephone" href="=tel:+12127724150">
             <svg class="icon">
               <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>
@@ -269,9 +269,9 @@
     <!-- Footer -->
     <footer class="global-footer">
       <div class="container">
-        <div class="global-footer-adress">
+        <div class="global-footer-address">
           <a class="logo" href="./index.html"><span>Web</span>Studio</a>
-          <address class="full-adress">
+          <address class="full-address">
             695 Park Ave, NY 10065, USA <br />
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a href="tel:+12127724150">+1 212-772-4150</a>
