--- a/portfolio.html
+++ b/portfolio.html
@@ -266,40 +266,41 @@
         </div>
       </section>
     </main>
-    <!-- Footer -->
     <footer class="global-footer">
       <div class="container">
-        <div class="global-footer-address">
-          <a class="logo" href="./index.html"><span>Web</span>Studio</a>
-          <address class="full-address">
-            695 Park Ave, NY 10065, USA <br />
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+12127724150">+1 212-772-4150</a>
-          </address>
-        </div>
-        <div class="footer-social-links">
-          <h3>Find us on</h3>
-          <div class="social-media">
-            <a href="www.instagram.com">
-              <svg class="icon">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-            <a href="www.twitter.com">
-              <svg class="icon">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-            <a href="www.facebook.com">
-              <svg class="icon">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-            <a href="www.linkedin.com">
-              <svg class="icon">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
+        <div class="footer-anchors">
+          <div class="global-footer-address">
+            <a class="logo" href="./index.html"><span>Web</span>Studio</a>
+            <address class="full-address">
+              695 Park Ave, NY 10065, USA <br />
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a href="tel:+12127724150">+1 212-772-4150</a>
+            </address>
+          </div>
+          <div class="footer-social-links">
+            <h3>Find us on</h3>
+            <div class="social-media">
+              <a href="www.instagram.com">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+              <a href="www.twitter.com">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+              <a href="www.facebook.com">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+              <a href="www.linkedin.com">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </div>
           </div>
         </div>
         <form class="global-footer-form" autocomplete="off">
@@ -311,7 +312,7 @@
               class="textfield"
               type="text"
               name="email"
-              id="email"
+              id="email-footer"
               pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$"
               required
               placeholder="E-mail"
